# eeg-cnn

./: .gitattributes  .gitignore  01_EDA_Analysis.ipynb  02_Wavelet_Analysis.ipynb  03_BoF_Clasificacion.ipynb  04_DeepConvNet_CNN.ipynb  05_DeepConvNet_CNN.ipynb  DeepConvNet_EEG.ipynb  README.md  articulo.md  deepconvnet_model.py  eda.py  generate_figures.py  pyproject.toml
data/bof_features/: X_bof_features.npy  bof_config.json  bof_feature_names.txt  bof_metadata.json  scaler_bof.pkl  trial_to_subject.npy  trial_to_task.npy  y_labels.npy
data/preprocessed/: X_data.npy  ch_names.npy  config_params.json  data_dimensions.npy  region_info.json  sfreq.npy  subjects_info.csv
left_imag/: S001_Task2_PREP_Left.set  S015_Task2_PREP_Left.set
results/bof_svm/: best_params.json  confusion_matrix.npy  grid_search_results.csv  summary.txt
results/deepconvnet/: deepconvnet_baseline.pth  metrics.npy  summary.txt
results/eda/: corr_region_summary.txt  psd_bandpower_per_channel.csv
results/wavelets/: channel_info.csv  feature_names.txt  wavelet_config.json  wavelet_features.npy
right_imag/: S001_Task2_PREP_Right.set  S015_Task2_PREP_Right.set
wavelet_reports/cwt_features_cache/: cwt_features_d19cc8dc.pkl
