[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datos-bci"
version = "1.0.0"
description = "Análisis de datos de interfaz cerebro-computadora (BCI) de imaginación motora usando EEGLAB"
authors = [
    {name = "Manuel Jurado", email = "manuel.jurado@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "mne>=1.10.0",
    "scipy>=1.16.0",
    "numpy>=1.26.0,<2.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
    "pandas>=2.3.0",
    "tqdm>=4.67.0",
    "PyWavelets>=1.9.0",
    "scikit-learn>=1.7.0",
    "torch>=2.2.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.0.0",
    "joblib>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[tool.setuptools]
py-modules = ["eda"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
